Fix wrong color on H1

--- a/css/default.css
+++ b/css/default.css
@@ -73,7 +73,7 @@ strong {
 }
 
 .join h1 {
-  color: var(--color-cyan-alt);
+  color: var(--color-dark-cyan);
 }
 
 .subscribe {
